--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "npm run build && pip install -r requirements.txt && python app.py"
   publish = "dist"
 
 [[redirects]]
@@ -9,3 +9,4 @@
 
 [build.environment]
   NODE_VERSION = "20"
+  PYTHON_VERSION = "3.9.18"
