--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: anything-boes-chat
     env: python
-    buildCommand: pip install -r requirements.txt && npm install && npm run build
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
@@ -12,6 +12,20 @@ services:
       - key: FLASK_ENV
         value: production
       - key: ALLOWED_ORIGINS
-        sync: false
+        value: https://earnest-alpaca-16802c.netlify.app/
+      - key: WEB_CONCURRENCY
+        value: 1
+      - key: PYTHON_MAX_THREADS
+        value: 1
+      - key: MAX_WORKERS
+        value: 1
+      - key: HF_MODEL_NAME
+        value: microsoft/DialoGPT-small
+      - key: HF_MAX_LENGTH
+        value: 1000
+      - key: HF_TOP_P
+        value: 0.95
+      - key: HF_TOP_K
+        value: 50
       - key: HUGGINGFACE_API_KEY
         sync: false
