--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Dependencies
-node_modules
+node_modules/
 /.pnp
 .pnp.js
 
@@ -38,9 +38,11 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-.venv
+.venv/
 venv/
 ENV/
+pip-wheel-metadata/
+.tox/
 
 # Logs
 npm-debug.log*
@@ -49,8 +51,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # Editor directories and files
-.idea
-.vscode
+.idea/
+.vscode/
 *.swp
 *.swo
 *~
