--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
-  command = "npm run build && pip install -r requirements.txt && python app.py"
+  command = "vite build"
   publish = "dist"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
+  status = 200
 
 [build.environment]
   NODE_VERSION = "20"
