--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anything-boes-chat",
-  "private": true,
+  "private": false,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.0",
     "autoprefixer": "^10.4.18",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
@@ -32,7 +32,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.2",
-    "vite": "^6.2.1"
+    "vite": "^5.4.14"
   },
   "overrides": {
     "follow-redirects": "^1.15.6",
