--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start-backend": "python3 -m flask run --port=3000",
+    "start-backend": "python3 -m flask run --port=5000",
     "dev-all": "concurrently \"npm run dev\" \"npm run start-backend\""
   },
   "dependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.8.3",
+    "esbuild": "^0.25.1",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -23,7 +24,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.18",
     "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
@@ -32,7 +33,7 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.2",
-    "vite": "^5.4.14"
+    "vite": "^6.2.1"
   },
   "overrides": {
     "follow-redirects": "^1.15.6",
