--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.399.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite": "^6.2.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.1.0",
@@ -31,13 +32,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.8.2",
-<<<<<<< HEAD
-    "vite": "^6.2.2"
-=======
-    "vite": "^6.2.1"
->>>>>>> b38fd2fabddac7faf93aed3db5b7333d8d10c4c9
+    "tailwindcss": "^3.4.1"
   },
   "overrides": {
     "follow-redirects": "^1.15.6",
